// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox base demo works fine 1`] = `
<div>
  <label
    class="t-checkbox undefined"
    modelvalue="false"
  >
    <input
      class="t-checkbox__former"
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      
      未选中项
      
    </span>
  </label>
  <label
    class="t-checkbox undefined"
    modelvalue="false"
  >
    <input
      class="t-checkbox__former"
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      
      未选悬停项
      
    </span>
  </label>
  <label
    class="t-checkbox undefined t-is-checked"
    modelvalue="false"
  >
    <input
      class="t-checkbox__former"
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      
       选中项 
      
    </span>
  </label>
  <label
    class="t-checkbox undefined t-is-disabled"
    modelvalue="false"
  >
    <input
      class="t-checkbox__former"
      disabled=""
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      
       未选禁用项 
      
    </span>
  </label>
  <label
    class="t-checkbox undefined t-is-checked t-is-disabled"
    modelvalue="false"
  >
    <input
      class="t-checkbox__former"
      disabled=""
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      
       选中禁用项 
      
    </span>
  </label>
</div>
`;

exports[`Checkbox checkbox group demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div>
    选中值: 北京（业务侧自定义全选功能）
  </div>
  <div>
    <label
      class="t-checkbox undefined t-is-indeterminate"
      modelvalue="false"
    >
      <input
        class="t-checkbox__former"
        type="checkbox"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
         全选 
        
      </span>
    </label>
    <label
      class="t-checkbox undefined"
      modelvalue="false"
    >
      <input
        class="t-checkbox__former"
        type="checkbox"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
         禁用全部 
        
      </span>
    </label>
  </div>
  <div
    class="t-checkbox-group"
    modelvalue="北京"
  >
    
    <label
      class="t-checkbox undefined t-is-checked"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
        value="北京"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        北京
        
      </span>
    </label>
    <label
      class="t-checkbox undefined"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
        value="上海"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        上海
        
      </span>
    </label>
    <label
      class="t-checkbox undefined"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
        value="广州"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        广州
        
      </span>
    </label>
    
    <!---->
  </div>
  <div>
    选中值: 深圳
  </div>
  <div
    class="t-checkbox-group"
    modelvalue="深圳"
  >
    
    <label
      checkall="true"
      class="t-checkbox undefined t-is-indeterminate"
      data-name="TDESIGN_CHECK_ALL"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        全选
        
      </span>
    </label>
    <label
      class="t-checkbox undefined t-is-checked"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
        value="深圳"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        深圳
        
      </span>
    </label>
    <label
      class="t-checkbox undefined"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
        value="杭州"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        杭州
        
      </span>
    </label>
    <label
      class="t-checkbox undefined"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
        value="厦门"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        厦门
        
      </span>
    </label>
    
    <!---->
  </div>
</div>
`;

exports[`Checkbox controlled demo works fine 1`] = `
<div>
  <label
    class="t-checkbox undefined t-is-checked"
    modelvalue="true"
  >
    <input
      class="t-checkbox__former"
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      
       语法糖（v-model） 
      
    </span>
  </label>
  <label
    class="t-checkbox undefined t-is-checked"
    modelvalue="false"
  >
    <input
      class="t-checkbox__former"
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      
       受控属性 
      
    </span>
  </label>
  <label
    class="t-checkbox undefined"
    modelvalue="false"
  >
    <input
      class="t-checkbox__former"
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      
       非受控属性 
      
    </span>
  </label>
</div>
`;

exports[`Checkbox link demo works fine 1`] = `
<div>
  <div
    class="demo-checkbox-row-desc"
  >
    选中值: [
  "上海"
]
  </div>
  <div
    class="demo-checkbox-row"
  >
    <!-- name 非必需 -->
    <div
      class="t-checkbox-group"
      modelvalue="上海"
    >
      
      <label
        class="t-checkbox undefined"
      >
        <input
          class="t-checkbox__former"
          name="city"
          type="checkbox"
          value="北京"
        />
        <span
          class="t-checkbox__input"
        />
        <span
          class="t-checkbox__label"
        >
          
          北京
          
        </span>
      </label>
      <label
        class="t-checkbox undefined t-is-checked"
      >
        <input
          class="t-checkbox__former"
          name="city"
          type="checkbox"
          value="上海"
        />
        <span
          class="t-checkbox__input"
        />
        <span
          class="t-checkbox__label"
        >
          
          上海
          
        </span>
      </label>
      <label
        class="t-checkbox undefined"
      >
        <input
          class="t-checkbox__former"
          name="city"
          type="checkbox"
          value="深圳"
        />
        <span
          class="t-checkbox__input"
        />
        <span
          class="t-checkbox__label"
        >
          
          深圳
          
        </span>
      </label>
      
      <!---->
    </div>
  </div>
  <div
    class="demo-checkbox-row"
  >
    <button
      class="t-button t-size-s t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         重置 
        
      </span>
    </button>
  </div>
</div>
`;
